fix: adjust entity select dropdown z-index layering

--- a/plugin/admin/src/css/components/_react-select-control.css
+++ b/plugin/admin/src/css/components/_react-select-control.css
@@ -6,3 +6,11 @@
 		box-shadow: none;
 	}
 }
+
+:root .react-select__menu {
+	z-index: 10;
+}
+
+.interface-complementary-area .components-panel {
+	z-index: 1;
+}
